Catch all requests and send them to angular

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,5 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    // Like yield in rails. Tells Angular to render the template here
+    / Like yield in rails. Tells Angular to render the template here
     %div{:"ng-view" => ""}
